# AdaptiveNLP

./: .gitignore  CMakeLists.txt  README.md  core.hpp  makefile-old.txt
AdaptiveNLP/: makefile-old.txt
examples/: CMakeLists.txt  makeBuildingBlocks.cpp  makeBuildingBlocks.hpp  plotter.cpp  plotter.hpp  test_blocks.cpp
examples/adaptiveCorridorExample/: adaptiveCorridorExample.cpp  adaptiveCorridorExampleHelpers.cpp  adaptiveCorridorExampleHelpers.hpp
examples/adaptiveCorridorExample/figures/animation/: animationMaker.py
examples/adaptiveCorridorExample/figures/animation_controls/: animationMaker.py
examples/adaptiveCorridorExample/plotting_data/: plotAllControlFrames.py  plotAllFrames.py  plotCompleteTrajectories.py  plotComputationTimes.py  plotMap.py  plotScaling.py  plotSummary.py
examples/figures/animation/: animationMaker.py
examples/figures/animation_controls/: animationMaker.py
examples/figures/sparsities/: animationMaker.py
examples/manyObstaclesExample/: manyObstaclesExample.cpp  manyObstaclesHelper.cpp  manyObstaclesHelper.hpp
examples/manyObstaclesExample/plotting_data/: plotVirtualScaling.py
examples/minimalExample/: minimalExample.cpp
examples/minimalExample/plotting_data/: plotSolution.py
examples/moonlanderExample/: errorEstimator.cpp  errorEstimator.hpp  moonlanderExample.cpp  moonlanderExampleHelper.cpp  moonlanderExampleHelper.hpp
examples/moonlanderExample/figures/animation/: animationMaker.py
examples/moonlanderExample/figures/sparsities/: animationMaker.py
examples/moonlanderExample/plotting_data/: plotAdaptiveTimings.py  plotControls.py  plotSparsities.py
examples/plotting_data/: plotAdaptiveTimings.py  plotAllFrames.py  plotCompleteTrajectories.py  plotComputationTimes.py  plotControls.py  plotMap.py  plotScaling.py  plotSparsities.py  plotSummary.py  plotVirtualScaling.py
include/: NLPInterface.hpp  adaptiveCorridorExampleHelpers.hpp  adaptiveNLP.hpp  bookkeeper.hpp  buildingBlocks.hpp  core.hpp  customExceptions.hpp  interfaceTester.hpp  makeBuildingBlocks.hpp  manyObstaclesHelper.hpp  moonlanderExampleHelper.hpp  plotter.hpp
plotting_data/: adaptive_gridding_sparsities_hess.csv  adaptive_gridding_sparsities_jac.csv  adaptive_gridding_timings.csv  circles.csv  controls.csv  corridors.csv  plotAdaptiveTimings.py  plotAll.py  plotComputationTimes.py  plotMap.py  plotSummary.py  results_adaptive.csv  results_naive.csv  results_ref.csv  solutions_adaptive.csv  solutions_naive.csv  solutions_ref.csv  timings_0.csv  timings_1.csv  timings_2.csv
src/: CMakeLists.txt  NLPInterface.cpp  adaptiveCorridorExample.cpp  adaptiveCorridorExampleHelpers.cpp  adaptiveNLP.cpp  bookkeeper.cpp  buildingBlocks.cpp  errorEstimator.cpp  interfaceTester.cpp  makeBuildingBlocks.cpp  manyObstaclesExample.cpp  manyObstaclesHelper.cpp  moonlanderExample.cpp  moonlanderExampleHelper.cpp  plotter.cpp  test_blocks.cpp
